tests/negative/typecheck/try-error.orng
fn main() -> Int {
    f() catch 0
}

fn f() -> (err: Char|)!Int {
    try g()
}

fn g() -> (err |)!Int {
    return .err
}